--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <version>4.3.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
